Resolve issue with expanded hud where as-of date was too wide when in narrow mode by making font size adaptive to width.

--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -272,7 +272,12 @@ html {
         margin-left: 32px;
         margin-top: -94px;
         margin-bottom: 94px;
-        font-size: 28px;
+        @media (max-width: $expandedMiniScheduleThreshold) {
+          font-size: 20px;
+        }
+        @media (min-width: $expandedMiniScheduleThreshold) {
+          font-size: 28px;
+        }
         font-weight: 200;
         color: #bbb;
       }
